# antimeridian

./: .pre-commit-config.yaml  .readthedocs.yaml  .zenodo.json  CHANGELOG.md  CODE_OF_CONDUCT  CONTRIBUTING.md  README.md  RELEASING.md  mkdocs.yml  pyproject.toml  release-please-config.json  requirements-dev.txt  setup.cfg  versions.json
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: ci.yaml  ci.yml  docs.yaml  joss.yaml  pages.yaml  release-please.yaml  release.yaml
docs/: api.md  api.rst  background.rst  cli.md  cli.rst  comparison.ipynb  conf.py  environment.yaml  examples.ipynb  examples.md  failure-modes.ipynb  failure-modes.md  index.md  index.rst  paper.bib  paper.md  the-algorithm.md  the-algorithm.rst
examples/: close.py  fix.py
scripts/: compare.sh  install-min-dependencies  visualize.py
src/antimeridian/: __init__.py  _cli.py  _implementation.py
tests/: README.md  conftest.py  test_antimeridian.py  test_bbox.py  test_cli.py  test_geojson.py  test_line_string.py  test_multi_polygon.py  test_multipolygon.py  test_polygon.py  test_segment.py  test_shape.py
tests/data/input/: both-poles.json  complex-split.json  crossing-latitude.json  extra-crossing.json  issues-164.json  issues-171.json  issues-174.json  issues-182.json  issues-187.json  issues-201.json  multi-split.json  north-pole.json  one-hole.json  south-pole.json  split.json  two-holes.json
tests/data/ogr2ogr/: almost-180.json  both-poles.json  complex-split.json  crossing-latitude.json  cw-only.json  cw-split.json  extra-crossing.json  force-north-pole.json  great-circle.json  issues-124.json  issues-81.json  latitude-band.json  line.json  multi-line.json  multi-no-antimeridian.json  multi-split.json  north-pole.json  one-ccw-hole.json  one-hole.json  over-180.json  overlap.json  point-on-antimeridian.json  simple-with-ccw-hole.json  simple.json  south-pole.json  split.json  two-holes.json
tests/data/output/: both-poles.json  complex-split.json  crossing-latitude.json  cw-only-no-fix.json  cw-only.json  cw-split-no-fix.json  force-north-pole.json  issues-134.json  latitude-band.json  multi-line.json  multi-split.json  north-pole.json  ocean.json  one-hole.json  point-on-antimeridian.json  simple.json  south-pole.json  split.json
tests/data/output/flat/: almost-180.json  both-poles.json  extra-crossing.json  force-north-pole.json  great-circle.json  issues-124.json  issues-134.json  issues-164.json  issues-171.json  issues-174.json  issues-187.json  issues-201.json  issues-81.json  line.json  multi-no-antimeridian.json  multi-split.json  ocean.json  overlap.json  south-pole.json  split.json  two-holes.json
tests/data/output/spherical/: almost-180.json  both-poles.json  complex-split.json  crossing-latitude.json  cw-only-no-fix.json  cw-only.json  cw-split-no-fix.json  cw-split.json  extra-crossing.json  force-north-pole.json  great-circle.json  issues-124.json  issues-164.json  issues-171.json  issues-174.json  issues-187.json  issues-201.json  issues-81.json  latitude-band.json  line.json  multi-line.json  ocean.json  (+9 more)
v0.3.11/: 404.html  index.html  objects.inv  sitemap.xml
v0.3.11/api/: index.html
v0.3.11/cli/: index.html
v0.3.11/comparison/: index.html
v0.3.11/examples/: index.html
v0.3.11/failure-modes/: index.html
v0.3.11/search/: search_index.json
v0.3.11/the-algorithm/: index.html
v0.3.12/: 404.html  index.html  sitemap.xml
v0.3.12/api/: index.html
v0.3.12/cli/: index.html
v0.3.12/comparison/: index.html
v0.3.12/examples/: index.html
v0.3.12/failure-modes/: index.html
v0.3.12/search/: search_index.json
v0.3.12/the-algorithm/: index.html
v0.4.0/: 404.html  index.html  sitemap.xml
v0.4.0/api/: index.html
v0.4.0/cli/: index.html
v0.4.0/comparison/: index.html
v0.4.0/examples/: index.html
v0.4.0/failure-modes/: index.html
v0.4.0/search/: search_index.json
v0.4.0/the-algorithm/: index.html
v0.4.1/: 404.html  index.html  paper.bib  sitemap.xml
v0.4.1/api/: index.html
v0.4.1/cli/: index.html
v0.4.1/comparison/: index.html
v0.4.1/examples/: index.html
v0.4.1/failure-modes/: index.html
v0.4.1/the-algorithm/: index.html
v0.4.2/: 404.html  index.html  sitemap.xml
v0.4.2/api/: index.html
v0.4.2/cli/: index.html
v0.4.2/comparison/: index.html
v0.4.2/examples/: index.html
v0.4.2/failure-modes/: index.html
v0.4.2/the-algorithm/: index.html
v0.4.3/: 404.html  index.html  sitemap.xml
v0.4.3/api/: index.html
v0.4.3/cli/: index.html
v0.4.3/comparison/: index.html
v0.4.3/examples/: crossing.json  index.html
v0.4.3/failure-modes/: index.html
v0.4.3/search/: search_index.json
v0.4.3/the-algorithm/: index.html
v0.4.4/: 404.html  index.html  sitemap.xml
v0.4.4/api/: index.html
v0.4.4/cli/: index.html
v0.4.4/comparison/: index.html
v0.4.4/examples/: S3A_SL_2_LST_20160521T015552_20160521T033651_6059_004_217_____.json  index.html
v0.4.4/failure-modes/: index.html
v0.4.4/search/: search_index.json
v0.4.4/the-algorithm/: index.html
v0.4.5/: 404.html  index.html  sitemap.xml
v0.4.5/api/: index.html
v0.4.5/cli/: index.html
v0.4.5/comparison/: index.html
v0.4.5/examples/: index.html
v0.4.5/failure-modes/: index.html
v0.4.5/search/: search_index.json
v0.4.5/the-algorithm/: index.html
v0.4.6/: 404.html  index.html  sitemap.xml
v0.4.6/api/: index.html
v0.4.6/cli/: index.html
v0.4.6/comparison/: index.html
v0.4.6/examples/: index.html
v0.4.6/failure-modes/: index.html
v0.4.6/the-algorithm/: index.html
v0.4.7/: 404.html  index.html  sitemap.xml
v0.4.7/api/: index.html
v0.4.7/cli/: index.html
v0.4.7/comparison/: index.html
v0.4.7/examples/: S3A_SL_2_LST_20160521T033651_20160521T051750_6059_004_218_____.json  index.html  wrapped.json
v0.4.7/failure-modes/: index.html
v0.4.7/search/: search_index.json
v0.4.7/the-algorithm/: index.html
