[metadata]
name = antimeridian
version = attr: antimeridian.__version__
author = Pete Gadomski
author_email = pete.gadomski@gmail.com
description = Correct GeoJSON geometries that cross the antimeridian
long_description = file: README.md
keywords = geojson, antimeridian, shapely
license = Apache-2.0
classifiers =
    Programming Language :: Python :: 3

[options]
package_dir=
    =src
packages=find:
install_requires =
    shapely >= 1.8

[options.packages.find]
where=src
